2007-09-07  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* www/doc/manual/examples/xosoap/example-07-soap-provider-init.tcl
          (echoFloat): Small fix in demo service -> argument in
          contract is meant to be inputFloat, not inputDate! Updated
          documentation. Thanks to Michael Totschnig for the hint.
	  Added missing png to the svn.

2007-09-06  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Tagged 0.4 preview release 

	* tcl/xorb-callback-procs.tcl: Added uninstall logic for 
	anythings of protocol plug-ins! 
	As for upgrades from 0.3 to 0.4, there is currently one
	limitation: contracts and 
	implementations that were defined by non-explicitly named
	::xotcl::Objects (by using new) cannot be identified through
	the allinstances used for upgrades (from within the scope of the
	upgrading connection thread as they were never initiated in
	this very very thread!). This must then be handled manually,
	this won't be a problem in 0.4+ thanks to the object types. 
	Finally, also, cleaned up un-used callbacks.

	* tcl/15-xorb-aux-procs.tcl: Some hacking for a non-errorprone
          installation while using ::xo::db::sql::*

2007-09-05  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/15-xorb-aux-procs.tcl: Added new ::xo::db::require
          function_args call for acs-service-contract packages <
          5.4.0d1

	* Tested for the new ::xo::db::require package
          as introduced by xotcl-core 0.70

2007-09-04  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Pitched requirement to xotcl-core 0.70. The update for
          acs-service-contract < 5.4.0d1 can't be handled by the
          install/ upgrade scripts, therefore it becomes an explicit
          requirement for the current install procedure to execture
          acs-service-contract-function-args.sql on the target db
          before proceeding with the installation.
	
	* tcl/15-xorb-aux-procs.tcl: First adjustment to xotcl-core
          0.70
